Added a footer, updated the credit page and added style

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,4 +14,13 @@
  *= require_self
  */
 
-@import 'bootstrap'
+@import 'bootstrap';
+
+html {
+ max-width: 960px;
+ margin: 0px auto;
+}
+
+.row {
+  margin: 10px;
+}
