Change BB to Bayou Binary B*tches

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -81,9 +81,9 @@ DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD+~:~?$8NNNDNDDDNDNDDDDDDDDDDDDDDDNNNDDDDDNNNNNDDD
   <!-- Standard Metadata -->
   <title>{placegant}</title>
   <meta name="description" content="Gantman placeholder images for awesome people">
-  <meta name="author" content="Binary Bitches">
+  <meta name="author" content="Bayou Binary Bitches">
   <meta name="keywords" content="gantman, gant laborde, tacos, imageholder, placeholder, placehold, binary bitches">
-  <meta name="copyright" content="Binary Bitches. Images &copy; people on the internet.">
+  <meta name="copyright" content="Bayou Binary Bitches. Images &copy; people on the internet.">
   <meta name="robots" content="all">
   <meta name="viewport" content="width=device-width; initial-scale=1.0;">
 
