Changed to Bayou Binary Bitches and font color to red

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,4 @@
 <div id="footer">
-  <p>Created by Binary Bitches for the Master of the Universe.</p>
+  <hr>
+  <p>Created by Bayou Binary Bitches for the Master of the Universe.</p>
 </div>
