Brought in font awesome, added text to the about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#about</h1>
-<p>Find me in app/views/home/about.html.erb</p>
+<h1>About placeGant</h1>
+<p>An homage to Gant Laborde, Master of the Universe. A project that was born during a TTS class. Gant writes the code your parents warned you about. His time is heavily influenced by his penchant for Mario games and social adventures. Enjoy the awesomeness of placeGant by jazzing up your work with placeholder images of Gant at his best. </p>
+<h2>Who are the Bayou Binary Bitches?</h2>
+
+<p>Nicole Mast <a href="https://github.com/nickymast" target="_blank"><i class="fa fa-github fa-lg"></i></a>
+</p>
+
