--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -111,6 +111,7 @@ DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD+~:~?$8NNNDNDDDNDNDDDDDDDDDDDDDDDNNNDDDDDNNNNNDDD
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/html5kit/style.css">
   <link rel="stylesheet" href="assets/css/placegant.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.2/css/font-awesome.min.css">
 
   <!-- Analytics here-->
 
