--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,18 +14,18 @@
           Like this: <a href="/200/300">http://placegant.me/200/300</a>
         </p>
 
-        <img id="image-0" src="<%= asset_path('gant408_287.jpg') %>" alt="Gant Laborde is the Master of the Universe">
+        <img id="image-0" src="<%= asset_path('home/gant408_287.jpg') %>" alt="Gant Laborde is the Master of the Universe">
 
       </div><!-- "unit-gant-content" -->
 
       <div id="unit-many-many-gants" class="unit">
-        <img id="image-1" src="<%= asset_path('gant200_287.jpg') %>" alt="Gant Laborde is smart">
-        <img id="image-2" src="<%= asset_path('gant200_140.jpg') %>" alt="Gant Laborde likes to talk">
-        <img id="image-3" src="<%= asset_path('gant200_139.jpg') %>" alt="Gant Laborde is super nice">
-        <img id="image-4" src="<%= asset_path('gant200_286.jpg') %>" alt="Gant Laborde is handsome">
-        <img id="image-5" src="<%= asset_path('gant96_140.jpg') %>" alt="Gant Laborde is generous">
-        <img id="image-6" src="<%= asset_path('gant96_139.jpg') %>" alt="Gant Laborde is awesome">
-        <img id="image-7" src="<%= asset_path('gant200_138.jpg') %>" alt="Gant Laborde has great hair">
+        <img id="image-1" src="<%= asset_path('home/gant200_287.jpg') %>" alt="Gant Laborde is smart">
+        <img id="image-2" src="<%= asset_path('home/gant200_140.jpg') %>" alt="Gant Laborde likes to talk">
+        <img id="image-3" src="<%= asset_path('home/gant200_139.jpg') %>" alt="Gant Laborde is super nice">
+        <img id="image-4" src="<%= asset_path('home/gant200_286.jpg') %>" alt="Gant Laborde is handsome">
+        <img id="image-5" src="<%= asset_path('home/gant96_140.jpg') %>" alt="Gant Laborde is generous">
+        <img id="image-6" src="<%= asset_path('home/gant96_139.jpg') %>" alt="Gant Laborde is awesome">
+        <img id="image-7" src="<%= asset_path('home/gant200_138.jpg') %>" alt="Gant Laborde has great hair">
       </div> <!-- "unit-many-many-gants" -->
     </div> <!-- "primary-content" -->
   </div> <!-- "container" -->
