changed instructions URL to include pg

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
         <p title="For when you need more Gant."><strong>A service for pictures of Gant, the Master of the Universe, for use as placeholders in your designs or code.</strong> Just put your image size (width <span class="amp">&amp;</span> height) after this URL and you'll get a placeholder.</p>
 
         <p class="links">
-          Like this: <a href="/200/300">http://placegant.me/200/300</a>
+          Like this: <a href="/200/300">http://placegant.me/pg/200/300</a>
         </p>
 
         <img id="image-0" src="<%= asset_path('home/gant408_287.jpg') %>" alt="Gant Laborde is the Master of the Universe">
