--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,11 +112,20 @@ DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD+~:~?$8NNNDNDDDNDNDDDDDDDDDDDDDDDNNNDDDDDNNNNNDDD
   <link rel="stylesheet" href="<%= asset_path('application.css.scss') %>">
   <link rel="stylesheet" href="<%= asset_path('placegant.css.scss') %>">
 
-  <!-- Analytics here-->
-
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-61038994-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 
 <body>
