--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,19 +94,16 @@ DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD+~:~?$8NNNDNDDDNDNDDDDDDDDDDDDDDDNNNDDDDDNNNNNDDD
 
 
   <!-- Open Graph Metadata -->
-  <meta property="og:site_name" content="placegant">
-  <meta property="og:title" content="placegant">
+  <meta property="og:site_name" content="placeGant">
+  <meta property="og:title" content="placeGant">
   <meta property="og:description" content="Gantman placeholder images for awesome people">
   <meta property="og:type" content="website">
   <meta property="og:image" content="http://placegant.me/200/200">
   <meta property="og:url" content="http://placegant.me">
 
-  <!-- Navigation -->
-  <link rel="home" href="/">
-
   <!-- Icons -->
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="shortcut icon" href="<%= asset_path('gant.ico') %>">
+  <link rel="icon" href="<%= asset_path('gant.ico') %>">
 
   <!-- CSS -->
   <link rel="stylesheet" href="<%= asset_path('application.css.scss') %>">
