Add html to /credits

--- a/app/views/home/credits.html.erb
+++ b/app/views/home/credits.html.erb
@@ -1,36 +1,212 @@
 <div class="container-fluid">
 
   <h1>placeGant</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>These are all of the images used on placeGant. Please provide correct attribution when using these images. If you need more of the Gantman in your life, the illustrations can be found as <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">stickers & t-shirts</a>.</p>
 
   <div class="row">
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_1.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a>
     </div>
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_2.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a>
     </div>
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_3.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
     </div>
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_4.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlabordeE">photo thanks to: Gant selfie</a>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_5.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a>
     </div>
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_6.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
     </div>
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_7.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
     </div>
     <div class="col-md-3">
-      <img src="http://placehold.it/200x200">
+      <img src="<%= asset_path('attribution/gant200_200_8.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_9.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_10.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_11.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_12.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_13.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_14.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_15.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_16.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_17.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_18.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">with Yukihiro Matsumoto, aka "Matz"</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_19.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_20.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant himself</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_21.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_22.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: BLT Ball</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_23.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_24.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_25.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant selfie</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_26.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_27.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_28.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">image thanks to: Gant Laborde</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_29.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_30.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_31.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist">sticker available at Red Bubble</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_32.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: friends of Gant</a>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_33.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://www.facebook.com/gantlaborde">photo thanks to: Gant selfie</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_34.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_35.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a>
+    </div>
+    <div class="col-md-3">
+      <img src="<%= asset_path('attribution/gant200_200_36.jpg') %>" alt="Gant Laborde">
+      <br>
+      <a href="https://github.com/mykia">photo thanks to: Mykia Smith</a>
+    </div>
+  </div>
 </div>
