cleaned up meta data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,101 +4,100 @@
 <head>
   <title>placeGant</title>
 
-<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
-<!--[if IE 7 ]> <html lang="en" class="no-js ie7"> <![endif]-->
-<!--[if IE 8 ]> <html lang="en" class="no-js ie8"> <![endif]-->
-<!--[if IE 9 ]> <html lang="en" class="no-js ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
-<head xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:og="http://ogp.me/ns#"><meta charset="utf-8">
+  <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+  <!--[if IE 7 ]> <html lang="en" class="no-js ie7"> <![endif]-->
+  <!--[if IE 8 ]> <html lang="en" class="no-js ie8"> <![endif]-->
+  <!--[if IE 9 ]> <html lang="en" class="no-js ie9"> <![endif]-->
+  <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en"> <!--<![endif]-->
+  <head xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:og="http://ogp.me/ns#"><meta charset="utf-8">
 
-<!--
-BREAKING NEWS: GANTMAN LOVES TACOS
+  <!--
+  BREAKING NEWS: GANTMAN LOVES TACOS
 
-888D8ND888$ZZ8O8D8DOD7OZ8D8O88=,,N8OO8OO$O8ZOOZ8DNDDD8NDN8OOZZ8ZO8=$ZZOZ8OZZZO?:
-OOODDODDD8DOZDDZOOZ8N$ZO8ND8ZZ.,OOOOOZO8OOOOOOZZ7OZN8DDDD8OOOZO8888D8OOO888OO7~:
-8O888OO88DOI?88DZ7$+Z,~OND8O8Z~D88888888888DDD88OZ8ZO88DD8OODDOO8OOZOO8OO88OZ+~:
-MNNNDO$=ZOZI?OO$$IIZOZ88OOZ+7DDO8D88ND88O8888DND8888OOOOZN8D$DOO8OO8O8$Z$DDO7=~:
-ZM8OOZI$88$IIZZI??7I++=7?I78D8OODO8D8DZ8O8888D8ZO8N88OOOOOO~+:8OZO8OD88O:8OZ+=?I
-DNOZZ$7ZO8$ZOOO?III?~+?77$OOOOOZOOD8OOZO88D8D8DDDDN888O8OZOOZ++D8D8OZD8O?O+Z==+7
-DMOO$$778O7$O88?777I+88Z$$88ODZOZD88OOOOD8DD8DNDDDDDDD8O88DD8O$$ZOZ++8Z=,+?7=::~
-7DZZZZZZ$O$$7Z8777I?+$$OZO88ODOO88D8O8DD8OOO88888DD8DD88O88D8D8D$$I=?OZI:?:?+~::
-O=?+=::,:~+++I77?I?I$Z$Z88O88DD88O8O888DD8ZO88OO8OD8DDD8888D88D878+=~8ZZOO=++=~~
-I==+?7$OD8ND8Z$77$IZ8OO8O888OOOO$7$O$8ZO8OO8DDDDO88D8DDD8DOO8O88DOO+Z7???I+~?+==
-,:~+778Z$$ZZ777IZZDD88O88DO$$Z$I?+??7$7$ZZZZO8888DDDDD888D8OOOO8D88$I?$Z==~=?==~
-7+I7+??IIII7III7O8DDDO8OO$$?+=~:::::==+I?II7$ZZO888DN88D88DO88888D88$$$$$I?I7?+=
-?$$$8ZZZ$$7$7I7ZZNNNDDOZZ7=::,,,,,,,::::~~~~=+IZOO8DDD8888D88DDD8DDDOOI77I7IZI=+
-????+++++??+?+?IDNNNNDOZI~:,,,,,,,,,,,,,,,:::~==?$DDNNOO88D8DDDDD8D8D8?+=+?=Z??+
-++=+=++==+++===+NNNNNDZI~::,,,,,,,,,,,,,,,,,,,::=~IZNN8DN8ODDDDDDDDD88Z7??+N$=?I
-++?+++++??++++IZNDNDNZ+=::,,,,,,,,,,,,,,,,,,,,,,,:~~INDNNN88NDD8DDDDD8OZ7??==~=+
-??+++=++~~+==+7NDDNDZ=:::::,,,,,,,,,,,,,,.,,,,,,:::~=IDDNDNDDDDDDDDDDDNIZ====~~~
-III?+++?++=+??8DMNDD+~::::::,,,,,,.,,,,,,,,,,,,,,:::~=7DNDDNNDDDDNDD8DNDO===~~~~
-IIIIIIIII?II7DNNNN87~~:::::,,,,,,,,,,,,,,,,,,,,,,,:::~=?NNNDDNDDDNDD88DDZ=++~~~:
-IIII???????IIDDNND$I~:::::::,,,,,,,,,,,,,,,,,,,,:::::::~?ODDNDDDNNDD88DDZ+?++~~~
-IIIIIIIII??IINDNNO$I~:::::,,,,,,,,,,,,,,,,,,,,,,,,,,,::~~+78DDDDDD8D88ODII==++=:
-IIIII?I7I?IIIDNNNOZ?~:::::,,,,,,,,,,,,,,,,,,,.,,,,,,,,:::~=?8NNNDNNDD88DZ++?++=+
-IIIIIII$O87II7NNNO$+=~::::::,,,,,,.,.,.......,,,,,,,:,,,:~=++7DNNNDNNDDNZ?+=++++
-I?III77$ZII$Z8NNDOO+=+=+==~~~:,,,,,,,,,,,,,::~=++??II?++?==~~+78DNDDNND8Z+++====
-+?+?++$8NMND8DNNDD7=Z7$$$$ZZZ$$?=:::::::::~=+77$ZZZZZ$$7777+~~=$DDNN8O888I=++===
-=+++++8ODDNDDDDNN8??7I?+?IZO8OZ$$?~:::::~~=I77I?+=~:::::~=+=:::?O88$8N88O7?+===+
-??++=?$D8888888DD8~+==~~:~~=???I7?~:::,,::=+??+???+==::::~~~:::=ZD7+?DDDDOO7+=+=
-++++?+?OON8DNN8ZDZ~~=~+?7O7~IZ7???+::,,,::=++??$?$OOZ$?7+:::::,:7OOZ?DDDND7OO===
-??+++++I8DNNNN$88?=:=I$I+?$I+~?++++::,,,:~~==?+++::~~+=+I?=~::::+$7$IDOZDN8OO7+=
-+?++++?I$ODDD8OOO=~~+?+===~~~===+==::,,,:~~~:=====~~~~~=~:::::::=$I77DDNO878Z+==
-++?+?+++IZDDNDO8O~~~~~~~===+=~=~:~=::::::::::::::~~~=~~::::,,:::~ZI?O?D8D$Z$..,,
-?++++???II8D8O88$~:::,:::::::::::~~~:,,:::::::::,,:,,,,,,,,,,,::~$~+$$8O8O$..:..
-?+++=+=IO$+$IO8I$~:::,,,,,,,,:::~:~::::,:,,:::::,,,,,,,,,,,,,,:,=7??+,7ND7=.....
-+++++=+??OZ7IDO?7~~:,,,,,,,,,::~~:::,,,,::::::::,,,,,.,,,,,,,,::~$I+DINO887+:,..
-???+++++?+II?88?7~:::,,,,,,,:::~~~:,,,,,,::::::::::,,,,,,,,,,,::=$=?DNZ8I8Z===~,
-??I?+?????+I?IM+$~~::,,,,,::::~~::::,,,,:,:,::::::::,,,,,,,:,::~~I+:DN8I?O?+===:
-=??++?I????+?+ID$=~::::::::~~~~::~::,,,,::,,::::~~~~:::::::::::~+$~,88$?I?++====
-?++??++?++??+?$$O?==:~:::~~==~===~=:::::~~=~~=:~~~=+=~:::::~~::=?Z:,88$I?++===~:
-?+??????+=+++?+$D$==~~::~++++++??II?+==+++?+??=+++?III+~:::~:~~+7ZIOD8?I+++=====
-+?I?++???+??I??7DO+==~~=7I7Z$$$$$Z$7?+==?77$7777$$$$ZZZ?~~~~~~+IZOON8$I+++++====
-??++???I?II+?ZI7O87==~~I$OZZOO$ZOO777I=I77$$$77$77Z$$$O7=~~~~=7$ZO88D++++++===++
-?II????++???II7ND8O7==~+8OZ7$7$7Z$$Z=~:~~I7??I+??$77+ZO7~~~~=I$ZOZ7$$??+?++=====
-+???++++???II??+++?$+++~$O7++?I?=+=+=======~~~==?Z==I7Z+~===I$ZZOZ7????++++=====
-+II?I?++?+?+++?I???7Z7I==7$?~~+7?,,....,.....,~8=~:~I$7~=+?IIZOO$I????I+++=+====
-+????+I?I?IIII???++?O$7?+IO?~~~+?~~.......,,+:+=::~=I$I?=??7$ZZOZ7??+??+?++=++=+
-777I????II+??I?II=+I7OOZ?7Z7?~:=====~::::=+=~~~::~=?7ZZ7+?$$ZZOO?????????++=++++
-???+?I7??IIIII?I7??+I78ZZI$$I=~:~=~~~:~~~~~~~::::~+7?Z$$$7$$OOZ?~????????++=++++
-?IIII7III7I+7I??I??+I?7O87$Z$I=~:~~~~:::::~::,:::=I7$$Z$$7ZOO7?~:=?I?????+++++++
-77I??I++7I77I?III?I?77?$D8O$Z$I+==~~=+++=~~=:==+=?$$ZZZ7Z$$$+~~:::??????++++++++
-$7III+?III=I+?I?+??I???IZ88ZZ$$7????I77777I????+I7$OZZ8OZ$$+~~::::~O?I??++++++++
-+II+7+I77?II?+?7+III?I+??$D8ZZZZ77$$ZZ7Z$ZZ$$?777$ZOOO8O7I?~~~:,::888??+?+++++++
-??II???+7?+????+I?II+I??7IO88ZZ$7$7II7777O77$Z7ZOZZZ88Z$ZI~~::::~D8888DD?++?++++
-?I=??7II?I++I7?++II7IIIIIZ?8D8OZZ$$7+$7I7$$7$$OZZO8O88OZ==~::,~ZDD8D88D8D88I=+++
-I$+7?7$I7Z7I7?$7?I???IZNDD+?D8OOO$$7I7IZ$7$Z$$ZZO8OO88I=::~:,,8DDDDDDD88DD88D$=+
-7?+7??II777I=7II?IODDDDDDD$+?8OZ$Z$7$ZZZZ$Z$ZZOOO8O8ZI~~~:::7DNDDDDDDDDD8DD8D8D$
-7$7$$I7?II+I7?OD8DDDDDDDDDN=~+$D8ZOZZZ$ZOZOOZOZO888Z?~~~::,DDDDDDDDDDDDDDND88DD8
-77$$$?I?II7$DDD8DDD8DDDDDD8$~~~IO88O$ZOOZ$ZOZZD8DD$==~~,:DDDDDDDDNDDDDDDND8DDDDD
-$7$77$7I7DODDDDDD8DDDDDDDD8N=~~=+$O8OO88OOODD8D$++~~~:=MDDDDDDDDDDDDDDNNDDDDDDDD
-ZZZ$$78DDDDDDD8DDDDDDDDDDD8O=~~~~~+=$$ND888$I+=~~:~~INDDDDDDDNDDDDDDDDNDDDDDDDDD
-ZZZODDDDDDD8DDDDDDDDDDDDDDDD==~::~~~==~+=~~~~~~~:INDNNDDDDDDNDDDDDDDNNDDDDDDDDDD
-O8DDDDDDDDDDDDDDDDDDDDDDDDDDZ+~::::~~~~=~~~~:~ONDNDDNDDDDDDDDDDDDNNNNDDDDDDDDNDD
-DDDDDDDDDDDDDDDDDDDDDDDDDDDDDO+~:::::~~=+7DNNDDNNDDNNDDNDDDDDDDDDNNNDDDDDDDDDNDD
-DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD+~:~?$8NNNDNDDDNDNDDDDDDDDDDDDDDDNNNDDDDDNNNNNDDD
+  888D8ND888$ZZ8O8D8DOD7OZ8D8O88=,,N8OO8OO$O8ZOOZ8DNDDD8NDN8OOZZ8ZO8=$ZZOZ8OZZZO?:
+  OOODDODDD8DOZDDZOOZ8N$ZO8ND8ZZ.,OOOOOZO8OOOOOOZZ7OZN8DDDD8OOOZO8888D8OOO888OO7~:
+  8O888OO88DOI?88DZ7$+Z,~OND8O8Z~D88888888888DDD88OZ8ZO88DD8OODDOO8OOZOO8OO88OZ+~:
+  MNNNDO$=ZOZI?OO$$IIZOZ88OOZ+7DDO8D88ND88O8888DND8888OOOOZN8D$DOO8OO8O8$Z$DDO7=~:
+  ZM8OOZI$88$IIZZI??7I++=7?I78D8OODO8D8DZ8O8888D8ZO8N88OOOOOO~+:8OZO8OD88O:8OZ+=?I
+  DNOZZ$7ZO8$ZOOO?III?~+?77$OOOOOZOOD8OOZO88D8D8DDDDN888O8OZOOZ++D8D8OZD8O?O+Z==+7
+  DMOO$$778O7$O88?777I+88Z$$88ODZOZD88OOOOD8DD8DNDDDDDDD8O88DD8O$$ZOZ++8Z=,+?7=::~
+  7DZZZZZZ$O$$7Z8777I?+$$OZO88ODOO88D8O8DD8OOO88888DD8DD88O88D8D8D$$I=?OZI:?:?+~::
+  O=?+=::,:~+++I77?I?I$Z$Z88O88DD88O8O888DD8ZO88OO8OD8DDD8888D88D878+=~8ZZOO=++=~~
+  I==+?7$OD8ND8Z$77$IZ8OO8O888OOOO$7$O$8ZO8OO8DDDDO88D8DDD8DOO8O88DOO+Z7???I+~?+==
+  ,:~+778Z$$ZZ777IZZDD88O88DO$$Z$I?+??7$7$ZZZZO8888DDDDD888D8OOOO8D88$I?$Z==~=?==~
+  7+I7+??IIII7III7O8DDDO8OO$$?+=~:::::==+I?II7$ZZO888DN88D88DO88888D88$$$$$I?I7?+=
+  ?$$$8ZZZ$$7$7I7ZZNNNDDOZZ7=::,,,,,,,::::~~~~=+IZOO8DDD8888D88DDD8DDDOOI77I7IZI=+
+  ????+++++??+?+?IDNNNNDOZI~:,,,,,,,,,,,,,,,:::~==?$DDNNOO88D8DDDDD8D8D8?+=+?=Z??+
+  ++=+=++==+++===+NNNNNDZI~::,,,,,,,,,,,,,,,,,,,::=~IZNN8DN8ODDDDDDDDD88Z7??+N$=?I
+  ++?+++++??++++IZNDNDNZ+=::,,,,,,,,,,,,,,,,,,,,,,,:~~INDNNN88NDD8DDDDD8OZ7??==~=+
+  ??+++=++~~+==+7NDDNDZ=:::::,,,,,,,,,,,,,,.,,,,,,:::~=IDDNDNDDDDDDDDDDDNIZ====~~~
+  III?+++?++=+??8DMNDD+~::::::,,,,,,.,,,,,,,,,,,,,,:::~=7DNDDNNDDDDNDD8DNDO===~~~~
+  IIIIIIIII?II7DNNNN87~~:::::,,,,,,,,,,,,,,,,,,,,,,,:::~=?NNNDDNDDDNDD88DDZ=++~~~:
+  IIII???????IIDDNND$I~:::::::,,,,,,,,,,,,,,,,,,,,:::::::~?ODDNDDDNNDD88DDZ+?++~~~
+  IIIIIIIII??IINDNNO$I~:::::,,,,,,,,,,,,,,,,,,,,,,,,,,,::~~+78DDDDDD8D88ODII==++=:
+  IIIII?I7I?IIIDNNNOZ?~:::::,,,,,,,,,,,,,,,,,,,.,,,,,,,,:::~=?8NNNDNNDD88DZ++?++=+
+  IIIIIII$O87II7NNNO$+=~::::::,,,,,,.,.,.......,,,,,,,:,,,:~=++7DNNNDNNDDNZ?+=++++
+  I?III77$ZII$Z8NNDOO+=+=+==~~~:,,,,,,,,,,,,,::~=++??II?++?==~~+78DNDDNND8Z+++====
+  +?+?++$8NMND8DNNDD7=Z7$$$$ZZZ$$?=:::::::::~=+77$ZZZZZ$$7777+~~=$DDNN8O888I=++===
+  =+++++8ODDNDDDDNN8??7I?+?IZO8OZ$$?~:::::~~=I77I?+=~:::::~=+=:::?O88$8N88O7?+===+
+  ??++=?$D8888888DD8~+==~~:~~=???I7?~:::,,::=+??+???+==::::~~~:::=ZD7+?DDDDOO7+=+=
+  ++++?+?OON8DNN8ZDZ~~=~+?7O7~IZ7???+::,,,::=++??$?$OOZ$?7+:::::,:7OOZ?DDDND7OO===
+  ??+++++I8DNNNN$88?=:=I$I+?$I+~?++++::,,,:~~==?+++::~~+=+I?=~::::+$7$IDOZDN8OO7+=
+  +?++++?I$ODDD8OOO=~~+?+===~~~===+==::,,,:~~~:=====~~~~~=~:::::::=$I77DDNO878Z+==
+  ++?+?+++IZDDNDO8O~~~~~~~===+=~=~:~=::::::::::::::~~~=~~::::,,:::~ZI?O?D8D$Z$..,,
+  ?++++???II8D8O88$~:::,:::::::::::~~~:,,:::::::::,,:,,,,,,,,,,,::~$~+$$8O8O$..:..
+  ?+++=+=IO$+$IO8I$~:::,,,,,,,,:::~:~::::,:,,:::::,,,,,,,,,,,,,,:,=7??+,7ND7=.....
+  +++++=+??OZ7IDO?7~~:,,,,,,,,,::~~:::,,,,::::::::,,,,,.,,,,,,,,::~$I+DINO887+:,..
+  ???+++++?+II?88?7~:::,,,,,,,:::~~~:,,,,,,::::::::::,,,,,,,,,,,::=$=?DNZ8I8Z===~,
+  ??I?+?????+I?IM+$~~::,,,,,::::~~::::,,,,:,:,::::::::,,,,,,,:,::~~I+:DN8I?O?+===:
+  =??++?I????+?+ID$=~::::::::~~~~::~::,,,,::,,::::~~~~:::::::::::~+$~,88$?I?++====
+  ?++??++?++??+?$$O?==:~:::~~==~===~=:::::~~=~~=:~~~=+=~:::::~~::=?Z:,88$I?++===~:
+  ?+??????+=+++?+$D$==~~::~++++++??II?+==+++?+??=+++?III+~:::~:~~+7ZIOD8?I+++=====
+  +?I?++???+??I??7DO+==~~=7I7Z$$$$$Z$7?+==?77$7777$$$$ZZZ?~~~~~~+IZOON8$I+++++====
+  ??++???I?II+?ZI7O87==~~I$OZZOO$ZOO777I=I77$$$77$77Z$$$O7=~~~~=7$ZO88D++++++===++
+  ?II????++???II7ND8O7==~+8OZ7$7$7Z$$Z=~:~~I7??I+??$77+ZO7~~~~=I$ZOZ7$$??+?++=====
+  +???++++???II??+++?$+++~$O7++?I?=+=+=======~~~==?Z==I7Z+~===I$ZZOZ7????++++=====
+  +II?I?++?+?+++?I???7Z7I==7$?~~+7?,,....,.....,~8=~:~I$7~=+?IIZOO$I????I+++=+====
+  +????+I?I?IIII???++?O$7?+IO?~~~+?~~.......,,+:+=::~=I$I?=??7$ZZOZ7??+??+?++=++=+
+  777I????II+??I?II=+I7OOZ?7Z7?~:=====~::::=+=~~~::~=?7ZZ7+?$$ZZOO?????????++=++++
+  ???+?I7??IIIII?I7??+I78ZZI$$I=~:~=~~~:~~~~~~~::::~+7?Z$$$7$$OOZ?~????????++=++++
+  ?IIII7III7I+7I??I??+I?7O87$Z$I=~:~~~~:::::~::,:::=I7$$Z$$7ZOO7?~:=?I?????+++++++
+  77I??I++7I77I?III?I?77?$D8O$Z$I+==~~=+++=~~=:==+=?$$ZZZ7Z$$$+~~:::??????++++++++
+  $7III+?III=I+?I?+??I???IZ88ZZ$$7????I77777I????+I7$OZZ8OZ$$+~~::::~O?I??++++++++
+  +II+7+I77?II?+?7+III?I+??$D8ZZZZ77$$ZZ7Z$ZZ$$?777$ZOOO8O7I?~~~:,::888??+?+++++++
+  ??II???+7?+????+I?II+I??7IO88ZZ$7$7II7777O77$Z7ZOZZZ88Z$ZI~~::::~D8888DD?++?++++
+  ?I=??7II?I++I7?++II7IIIIIZ?8D8OZZ$$7+$7I7$$7$$OZZO8O88OZ==~::,~ZDD8D88D8D88I=+++
+  I$+7?7$I7Z7I7?$7?I???IZNDD+?D8OOO$$7I7IZ$7$Z$$ZZO8OO88I=::~:,,8DDDDDDD88DD88D$=+
+  7?+7??II777I=7II?IODDDDDDD$+?8OZ$Z$7$ZZZZ$Z$ZZOOO8O8ZI~~~:::7DNDDDDDDDDD8DD8D8D$
+  7$7$$I7?II+I7?OD8DDDDDDDDDN=~+$D8ZOZZZ$ZOZOOZOZO888Z?~~~::,DDDDDDDDDDDDDDND88DD8
+  77$$$?I?II7$DDD8DDD8DDDDDD8$~~~IO88O$ZOOZ$ZOZZD8DD$==~~,:DDDDDDDDNDDDDDDND8DDDDD
+  $7$77$7I7DODDDDDD8DDDDDDDD8N=~~=+$O8OO88OOODD8D$++~~~:=MDDDDDDDDDDDDDDNNDDDDDDDD
+  ZZZ$$78DDDDDDD8DDDDDDDDDDD8O=~~~~~+=$$ND888$I+=~~:~~INDDDDDDDNDDDDDDDDNDDDDDDDDD
+  ZZZODDDDDDD8DDDDDDDDDDDDDDDD==~::~~~==~+=~~~~~~~:INDNNDDDDDDNDDDDDDDNNDDDDDDDDDD
+  O8DDDDDDDDDDDDDDDDDDDDDDDDDDZ+~::::~~~~=~~~~:~ONDNDDNDDDDDDDDDDDDNNNNDDDDDDDDNDD
+  DDDDDDDDDDDDDDDDDDDDDDDDDDDDDO+~:::::~~=+7DNNDDNNDDNNDDNDDDDDDDDDNNNDDDDDDDDDNDD
+  DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD+~:~?$8NNNDNDDDNDNDDDDDDDDDDDDDDDNNNDDDDDNNNNNDDD
 
--->
+  -->
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="imagetoolbar" content="no">
 
   <!-- Standard Metadata -->
-  <title>{placegant}</title>
+  <title>{placeGant}</title>
   <meta name="description" content="Gantman placeholder images for awesome people">
-  <meta name="author" content="Binary Bayou Bitches">
-  <meta name="keywords" content="gantman, gant laborde, tacos, imageholder, placeholder, placehold, binary bitches">
-  <meta name="copyright" content="Binary Bayou Bitches. Images &copy; people on the internet.">
+  <meta name="author" content="Bayou Binary Bitches">
+  <meta name="keywords" content="gantman, gant laborde, tacos, imageholder, placeholder, placehold, bayou binary bitches">
+  <meta name="copyright" content="Bayou Binary Bitches. Images &copy; people on the internet.">
   <meta name="robots" content="all">
   <meta name="viewport" content="width=device-width; initial-scale=1.0;">
-
 
   <!-- Open Graph Metadata -->
   <meta property="og:site_name" content="placeGant">
   <meta property="og:title" content="placeGant">
   <meta property="og:description" content="Gantman placeholder images for awesome people">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="http://placegant.me/200/200">
+  <meta property="og:image" content="http://placegant.me/assets/home/gant408_287-ff11b88ee8e1a09132df792142007f51.jpg">
   <meta property="og:url" content="http://placegant.me">
 
   <!-- Icons -->
@@ -128,9 +127,9 @@ DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD+~:~?$8NNNDNDDDNDNDDDDDDDDDDDDDDDNNNDDDDDNNNNNDDD
 
 <body>
 
-<%= yield %>
+  <%= yield %>
 
-<%= render 'shared/footer' %>
+  <%= render 'shared/footer' %>
 
 </body>
 </html>
