--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,10 +7,10 @@
           <h1>placeGant</h1>
         </header>
 
-        <p title="For when you need more Gant."><strong>A service for pictures of Gant, Master of the Universe, for use as placeholders in your designs or code.</strong> Just put your desired image size (width <span class="amp">&amp;</span> height) after this URL and you'll get a placeholder Gant.</p>
+        <p title="For when you need more Gant."><strong>A service for pictures of Gant, Master of the Universe, for use as placeholders in your designs or code.</strong> Just put your desired image size (width & height) after this URL and you'll get a placeholder Gant.</p>
 
         <p class="links">
-          Like this: <a href="/200/300">http://placegant.me/pg/200/300</a>
+          Use like this: <a href="/200/300">http://placegant.me/pg/200/300</a>
         </p>
 
         <img id="image-0" src="<%= asset_path('home/gant408_287.jpg') %>" alt="Gant Laborde is the Master of the Universe">
