--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,44 @@
-<h1>Home#about</h1>
-<p>Find me in app/views/home/about.html.erb</p>
+<div id="container">
+  <h1>placeGant</h1>
+  <p>An homage to Gant Laborde, Master of the Universe. Gant writes the code your parents warned you about. His time is heavily influenced by his penchant for Mario games and social adventures. Jazz up your work with placeholder images of Gant at his best.</p>
+  <p>Inspired by <a href="http://placekitten.com/">placekitten</a>.</p>
+  <h1>Contributors</h1>
+<div class="grid">
+  <!-- 100% wide -->
+  <div class="col-1-4">
+    <img id="image-1" src="<%= asset_path('about/hannah.jpg') %>" height="200" width="200" alt="Hannah">
+    <p class="author">
+      <strong>Hannah Lehman</strong>
+      <a href="https://github.com/HannahLehman" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+  </div>
+  <div class="col-1-4">
+    <img id="image-1" src="<%= asset_path('about/angiegreen.jpg') %>" height="200" width="200" alt="Angie">
+    <p class="author">
+      <strong>Angie Green</strong>
+      <a href="https://github.com/AngieGreen" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+  </div>
+  <div class="col-1-4">
+    <img id="image-1" src="<%= asset_path('about/nickymast.jpg') %>" height="200" width="200" alt="Nicky">
+    <p class="author">
+      <strong>Nicky Mast</strong>
+      <a href="https://github.com/nickymast" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+  </div>
+  <div class="col-1-4">
+    <img id="image-1" src="<%= asset_path('about/mykia.jpg') %>" height="200" width="200" alt="Mykia">
+    <p class="author">
+      <strong>Mykia Smith</strong>
+       <a href="https://github.com/mykia" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+  </div>
+   <div class="col-1-4">
+    <img id="image-1" src="<%= asset_path('about/katiepatch.jpg') %>" height="200" width="200" alt="Patch">
+    <p class="author">
+      <strong>Katie Patch</strong>
+      <a href="https://github.com/katiepatch" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    </p>
+  </div>
+</div>
+</div>
