--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,10 @@
-<div id="footer">
-  <hr>
-  <p>Created by Bayou Binary Bitches for the Master of the Universe.</p>
-</div>
+<footer>
+  <div class="footer">
+
+   <%= link_to "Home", home_index_path  %> |
+   <%= link_to "Credits", home_credits_path  %> |
+   <%= link_to "About", home_about_path %>
+   <p>Created by Bayou Binary Bitches for the Master of the Universe.</p>
+
+  </div>
+</footer>
