Edit header IDs for styling.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -363,4 +363,10 @@ table.layout, table.layout thead, table.layout th, table.layout tbody, table.lay
   }
 }
 
+#home_header {
+  font-family: 'Russo One', sans-serif;
+  font-weight: 400;
+  color: #6B0000;
+}
+
 /* @end */
