--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>placeGant</title>
-  <link href='https://fonts.googleapis.com/css?family=Russo+One' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Russo+One' rel='stylesheet' type='text/css'>
 
   <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
   <!--[if IE 7 ]> <html lang="en" class="no-js ie7"> <![endif]-->
