--- a/app/assets/stylesheets/placegant.css.scss
+++ b/app/assets/stylesheets/placegant.css.scss
@@ -56,7 +56,7 @@ header {
   width: 408px;
   float: left;
 }
-header h1 {
+#home_header {
   margin: 0 0 36px 0;
   color: #999;
   font: normal normal 5em Baskerville, Palatino, "Book Antiqua", serif;
