--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-header h1 {
+/*header h1 {
   font-family: 'Russo One', sans-serif;
   font-weight: 400;
   color: #6B0000;
-}
+}*/
