--- a/app/assets/stylesheets/placegant.css.scss
+++ b/app/assets/stylesheets/placegant.css.scss
@@ -56,7 +56,7 @@ header {
   width: 408px;
   float: left;
 }
-#home_header {
+header h1 {
   margin: 0 0 36px 0;
   color: #999;
   font: normal normal 5em Baskerville, Palatino, "Book Antiqua", serif;
@@ -150,4 +150,10 @@ header {
 }
 .page-attribution #unit-content span img {
   display: inline-block;
+}
+
+#home_header {
+  font-family: 'Russo One', sans-serif;
+  font-weight: 400;
+  color: #6B0000;
 }
