--- a/app/assets/stylesheets/placegant.css.scss
+++ b/app/assets/stylesheets/placegant.css.scss
@@ -152,7 +152,7 @@ header h1 {
   display: inline-block;
 }
 
-#home_header {
+header h1 {
   font-family: 'Russo One', sans-serif;
   font-weight: 400;
   color: #6B0000;
