--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <div id="container">
     <div id="primary-content" role="main">
       <div id="unit-gant-content" class="unit">
-        <header id="home_header">
+        <header >
           <h1>placeGant</h1>
         </header>
 
