--- a/app/assets/stylesheets/placegant.css.scss
+++ b/app/assets/stylesheets/placegant.css.scss
@@ -39,18 +39,18 @@ h4,h5,h6,h1 strong,h2 strong,h3 strong,h4 strong,h5 strong,h6 strong {
   font-family: Baskerville, Palatino, "Book Antiqua", serif;
 }
 a {
-  color: #F03434;
+  color: #6b0000;
   text-decoration: none;
   -webkit-transition: color 0.1s linear;
 }
 a:visited {
-  color: #F03434;
+  color: #6b0000;
 }
 a:hover {
   color: #C60000;
 }
 a:active {
-  color: #F03434;
+  color: #c60000;
 }
 header {
   width: 408px;
