--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,6 +3,7 @@
   <div id="container">
     <div id="primary-content" role="main">
       <div id="unit-gant-content" class="unit">
+
         <header >
           <h1>placeGant</h1>
         </header>
@@ -14,16 +15,33 @@
         </p>
 
         <img id="image-0" src="<%= asset_path('home/gant408_287.jpg') %>" alt="Gant Laborde is the Master of the Universe">
-      </div>
+
+      </div> <!-- unit-gant-content -->
 
       <div id="unit-many-many-gants" class="unit">
-        <img id="image-1" src="<%= asset_path('home/gant200_287.jpg') %>" alt="Gant Laborde is smart">
-        <img id="image-2" src="<%= asset_path('home/gant200_140.jpg') %>" alt="Gant Laborde likes to talk">
-        <img id="image-3" src="<%= asset_path('home/gant200_139.jpg') %>" alt="Gant Laborde is super nice">
-        <img id="image-4" src="<%= asset_path('home/gant200_286.jpg') %>" alt="Gant Laborde is handsome">
-        <img id="image-5" src="<%= asset_path('home/gant96_140.jpg') %>" alt="Gant Laborde is generous">
-        <img id="image-6" src="<%= asset_path('home/gant96_139.jpg') %>" alt="Gant Laborde is awesome">
-        <img id="image-7" src="<%= asset_path('home/gant200_138.jpg') %>" alt="Gant Laborde has great hair">
+
+        <div class="col-1-1">
+          <img id="image-1" src="<%= asset_path('home/gant200_287.jpg') %>" alt="Gant Laborde is smart">
+        </div> <!-- col-1-1 -->
+        <div class="col-1-2">
+          <img id="image-2" src="<%= asset_path('home/gant200_140.jpg') %>" alt="Gant Laborde likes to talk">
+        </div> <!-- col-1-2 -->
+        <div class="col-2-1">
+          <img id="image-3" src="<%= asset_path('home/gant200_139.jpg') %>" alt="Gant Laborde is super nice">
+        </div> <!-- col-2-1 -->
+        <div class="col-2-2">
+          <img id="image-4" src="<%= asset_path('home/gant200_286.jpg') %>" alt="Gant Laborde is handsome">
+        </div> <!-- col-2-2 -->
+        <div class="col-2-3">
+          <img id="image-5" src="<%= asset_path('home/gant96_140.jpg') %>" alt="Gant Laborde is generous">
+        </div> <!-- col-2-3 -->
+        <div class="col-2-4">
+          <img id="image-6" src="<%= asset_path('home/gant96_139.jpg') %>" alt="Gant Laborde is awesome">
+        </div> <!-- col-2-4 -->
+        <div class="col-2-5">
+          <img id="image-7" src="<%= asset_path('home/gant200_138.jpg') %>" alt="Gant Laborde has great hair">
+        </div> <!-- col-2-5 -->
+
       </div> <!-- "unit-many-many-gants" -->
     </div> <!-- "primary-content" -->
   </div> <!-- "container" -->
