Add Source to Footer.

--- a/app/views/home/credits.html.erb
+++ b/app/views/home/credits.html.erb
@@ -5,8 +5,7 @@
 
         <header id="header">
           <h1>placeGant Credits</h1>
-          <p>These are all of the images used on placeGant. Please provide correct attribution when using these images. If you need more of the Gantman in your life, the illustrations can be found as <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist" target="_blank">stickers & t-shirts</a>.
-          </p>
+          These are all of the images used on placeGant. Please provide correct attribution when using these images. If you need more of the Gantman in your life, the illustrations can be found as <a href="http://www.redbubble.com/people/gantman/collections/236030-gant-the-mad-scientist" target="_blank">stickers & t-shirts</a>.
         </header>
 
         <p><img src="<%= asset_path('attribution/gant200_200_1.jpg') %>" alt="Gant Laborde">
