--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,8 @@
 
    <%= link_to "Home", home_index_path  %> |
    <%= link_to "Credits", home_credits_path  %> |
-   <%= link_to "About", home_about_path %>
+   <%= link_to "About", home_about_path %> |
+   <a href="//github.com/HannahLehman/pGme">Source</a>
    <p>Created by Bayou Binary Bitches for the Master of the Universe.</p>
 
   </div>
